Source/WebCore/rendering/RenderMultiColumnFlowThread.cpp
@@ -211,4 +211,14 @@ RenderRegion* RenderMultiColumnFlowThread::mapFromFlowToRegion(TransformState& t
     return renderRegion;
 }
 
+bool RenderMultiColumnFlowThread::isPageLogicalHeightKnown() const
+{
+    for (RenderBox* renderer = parentBox()->lastChildBox(); renderer; renderer = renderer->previousSiblingBox()) {
+        if (renderer->isRenderMultiColumnSet())
+            return toRenderMultiColumnSet(renderer)->computedColumnHeight();
+    }
+    // A column set hasn't been created yet. Height may already be known if column-fill is 'auto', though.
+    return !requiresBalancing();
+}
+
 }
