Source/WebCore/rendering/RenderMultiColumnFlowThread.h
@@ -73,6 +73,7 @@ private:
     virtual void setPageBreak(const RenderBlock*, LayoutUnit offset, LayoutUnit spaceShortage) override;
     virtual void updateMinimumPageHeight(const RenderBlock*, LayoutUnit offset, LayoutUnit minHeight) override;
     virtual bool addForcedRegionBreak(const RenderBlock*, LayoutUnit, RenderBox* breakChild, bool isBefore, LayoutUnit* offsetBreakAdjustment = 0) override;
+    virtual bool isPageLogicalHeightKnown() const override;
 
 private:
     unsigned m_columnCount;   // The default column count/width that are based off our containing block width. These values represent only the default,
